fix auto-scroll on guests overflow

--- a/apps/codingcatdev/src/styles/app.css
+++ b/apps/codingcatdev/src/styles/app.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+	@apply h-2;
+}
+
 html,
 body {
 	@apply h-full overflow-hidden;
